virtualbox (4.1.10-dfsg-1) UNRELEASED; urgency=low

  * Build-depend on libpng-dev instead of libpng12-dev. (Closes: #662537)
  * Refresh 18-system-xorg.patch.

 -- Felix Geyer <debfx-pkg@fobos.de>  Mon, 05 Mar 2012 14:54:53 +0100

virtualbox (4.1.8-dfsg-2) unstable; urgency=low

  * Install vboxvideo_dri.so into the directory provided by the dri pkg-config
    file. (LP: #930324)

 -- Felix Geyer <debfx-pkg@fobos.de>  Sun, 19 Feb 2012 17:17:04 +0100

virtualbox (4.1.8-dfsg-1) unstable; urgency=low

  * New upstream release.
  * Move all transitional packages to section oldlibs and priority extra.
  * Refresh 16-no-update.patch.
  * Drop 36-kernel-3.2.patch, applied upstream.

 -- Felix Geyer <debfx-pkg@fobos.de>  Thu, 29 Dec 2011 12:29:25 +0100

virtualbox (4.1.6-dfsg-2) unstable; urgency=low

  * Fix build errors with kernel 3.2. (LP: #892506)
    - Add 36-kernel-3.2.patch, cherry-picked from upstream.
  * Make dependencies of the dkms packages on virtualbox/virtualbox-guest-utils
    versioned.
  * Move VBoxDbg.so to virtualbox-qt as it's a GUI component.

 -- Felix Geyer <debfx-pkg@fobos.de>  Sat, 19 Nov 2011 18:55:11 +0100

virtualbox (4.1.6-dfsg-1) unstable; urgency=low

  [ Felix Geyer ]
  * virtualbox-guest-x11: Drop xorg input driver from Provides and xorg input
    abi from Depends.

  [ Michael Meskes ]
  * New upstream release.
    - Fixes graphical corruption when switching to a virtual terminal.
      (Closes: #638941)

 -- Michael Meskes <meskes@debian.org>  Tue, 15 Nov 2011 12:37:22 +0100

virtualbox (4.1.4-dfsg-1) unstable; urgency=low

  * New upstream release.
    - Fixes missing icons when using pt_BR locale. (Closes: #507188)
    - Fixes guest additions download url. (Closes: #637349; LP: #840668)
  * Refresh patches.
  * Drop the vboxmouse x11 driver. The mouse integration is now completely
    handled by the kernel module.
  * Restrict dh_pycentral to the virtualbox binary package.